@@ -1,3 +1,7 @@
+2021-04-25  Danilo Chang  <ray2501@gmail.com>
+
+	* Update UnQLite source code
+
 2021-01-06  Danilo Chang  <ray2501@gmail.com>
 
 	* Set version to v0.3.5
